# xo-api-client

./: Cargo.toml  README.md  all_procedures.md
.github/workflows/: miri.yml
examples/: list_vms.rs
src/: client.rs  credentials.rs  lib.rs  macros.rs  object_type.rs  token_handler.rs  types.rs  vm.rs
src/api/: .disk.rs.swp  disk.rs  extensions.rs  mod.rs  session.rs  token.rs  xo.rs
src/api/vm/: mod.rs  tests.rs  types.rs
test_data/snapshot/: debian_10.json  pfsense_2_5_1.json
test_data/vm/: debian_10.json  pfsense_2_5_1.json  ubuntu_18_04.json  windows_10.json
