[package]
name = "xo-api-client"
version = "0.0.3"
authors = ["Albin Hedman <albin9604@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/usbalbin/xo-api-client"
description = "Unofficial crate for accessing Xen Orchestra through its API"
keywords = ["xen", "xcp-ng", "client", "vm", "tokio"]
categories = ["api-bindings", "asynchronous", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
futures = "0.3"
jsonrpsee-types = "0.3.0"
jsonrpsee-ws-client = "0.3.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.12.0" }
log = "0.4.0"

[dev-dependencies]
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
